infra/network/network.yml
Parameters:
  VPCCIDR:
    Type: String
    Description: CIDR block used to create the VPC (e.g. 10.0.0.0/24)
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{2})"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x. (e.g. 10.0.0.0/24)
  PublicSubnet1CIDR:
    Type: String
    Description: CIDR block should used to create the public subnet in AZ1 (e.g. 10.0.0.0/26)
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{2})"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x. (e.g. 10.0.0.0/26)
  PublicSubnet2CIDR:
    Type: String
    Description: CIDR block should used to create the public subnet in AZ2 (e.g. 10.0.0.64/26)
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{2})"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x. (e.g. 10.0.0.64/26)
  PublicSubnet3CIDR:
    Type: String
    Description: CIDR block should used to create the public subnet in AZ3 (e.g. 10.0.0.64/26)
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{2})"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x. (e.g. 10.0.0.64/26)
  PrivateSubnet1CIDR:
    Type: String
    Description: CIDR block should used to create the private subnet in AZ1 (e.g. 10.0.0.128/26)
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{2})"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x. (e.g. 10.0.0.128/26)
  PrivateSubnet2CIDR:
    Type: String
    Description: CIDR block should used to create the private subnet in AZ2 (e.g. 10.0.0.192/26)
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{2})"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x. (e.g. 10.0.0.192/26)
  PrivateSubnet3CIDR:
    Type: String
    Description: CIDR block should used to create the private subnet in AZ3 (e.g. 10.0.0.192/26)
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{2})"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x. (e.g. 10.0.0.192/26)
  ApplicationName:
    Type: String
    Description: Application Name
  Environment:
    Type: String
    Description: "Environment: staging, production, etc."

Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub '${ApplicationName}::${Environment}::network/VPC'
        - Key: Environment
          Value: !Ref Environment
  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select [ 0, Fn::GetAZs: !Ref AWS::Region ]
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub '${ApplicationName}::${Environment}::network/PublicSubnet1'
        - Key: Environment
          Value: !Ref Environment
      VpcId: !Ref VPC
  PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select [ 1, Fn::GetAZs: !Ref AWS::Region ]
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub '${ApplicationName}::${Environment}::network/PublicSubnet2'
        - Key: Environment
          Value: !Ref Environment
      VpcId: !Ref VPC
  PublicSubnet3:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select [ 2, Fn::GetAZs: !Ref AWS::Region ]
      CidrBlock: !Ref PublicSubnet3CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub '${ApplicationName}::${Environment}::network/PublicSubnet3'
        - Key: Environment
          Value: !Ref Environment
      VpcId: !Ref VPC
  PrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select [ 0, Fn::GetAZs: !Ref AWS::Region ]
      CidrBlock: !Ref PrivateSubnet1CIDR
      Tags:
        - Key: Name
          Value: !Sub '${ApplicationName}::${Environment}::network/PrivateSubnet1'
        - Key: Environment
          Value: !Ref Environment
      VpcId: !Ref VPC
  PrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select [ 1, Fn::GetAZs: !Ref AWS::Region ]
      CidrBlock: !Ref PrivateSubnet2CIDR
      Tags:
        - Key: Name
          Value: !Sub '${ApplicationName}::${Environment}::network/PrivateSubnet2'
        - Key: Environment
          Value: !Ref Environment
      VpcId: !Ref VPC
  PrivateSubnet3:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select [ 2, Fn::GetAZs: !Ref AWS::Region ]
      CidrBlock: !Ref PrivateSubnet3CIDR
      Tags:
        - Key: Name
          Value: !Sub '${ApplicationName}::${Environment}::network/PrivateSubnet3'
        - Key: Environment
          Value: !Ref Environment
      VpcId: !Ref VPC
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${ApplicationName}::${Environment}::network/InternetGateway'
        - Key: Environment
          Value: !Ref Environment
  VPCGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${ApplicationName}::${Environment}::network/PublicRouteTable'
        - Key: Environment
          Value: !Ref Environment
      VpcId: !Ref VPC
  PublicSubnetRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable
    DependsOn:
      - VPCGatewayAttachment
  RouteTableAssociationpublic1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1
  NATGateway1:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt
        - NATIP1
        - AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub '${ApplicationName}::${Environment}::network/NATGateway1'
        - Key: Environment
          Value: !Ref Environment
  NATIP1:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub '${ApplicationName}::${Environment}::network/NATIP1'
        - Key: Environment
          Value: !Ref Environment
  RouteTablePrivateSubnet1:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${ApplicationName}::${Environment}::network/RouteTablePrivateSubnet1'
        - Key: Environment
          Value: !Ref Environment
      VpcId: !Ref VPC
  RoutePrivateSubnet1:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway1
      RouteTableId: !Ref RouteTablePrivateSubnet1
  RouteTableAssociationPrivateSubnet1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref RouteTablePrivateSubnet1
      SubnetId: !Ref PrivateSubnet1
  RouteTableAssociationpublic2:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2
  NATGateway2:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt
        - NATIP2
        - AllocationId
      SubnetId: !Ref PublicSubnet2
      Tags:
        - Key: Name
          Value: !Sub '${ApplicationName}::${Environment}::network/NATGateway2'
        - Key: Environment
          Value: !Ref Environment
  NATIP2:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub '${ApplicationName}::${Environment}::network/NATIP2'
        - Key: Environment
          Value: !Ref Environment
  RouteTablePrivateSubnet2:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${ApplicationName}::${Environment}::network/RouteTablePrivateSubnet2'
        - Key: Environment
          Value: !Ref Environment
      VpcId: !Ref VPC
  RoutePrivateSubnet2:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway2
      RouteTableId: !Ref RouteTablePrivateSubnet2
  RouteTableAssociationPrivateSubnet2:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref RouteTablePrivateSubnet2
      SubnetId: !Ref PrivateSubnet2

  RouteTableAssociationpublic3:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet3
  NATGateway3:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt
        - NATIP3
        - AllocationId
      SubnetId: !Ref PublicSubnet3
      Tags:
        - Key: Name
          Value: !Sub '${ApplicationName}::${Environment}::network/NATGateway3'
        - Key: Environment
          Value: !Ref Environment
  NATIP3:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub '${ApplicationName}::${Environment}::network/NATIP3'
        - Key: Environment
          Value: !Ref Environment
  RouteTablePrivateSubnet3:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${ApplicationName}::${Environment}::network/RouteTablePrivateSubnet3'
        - Key: Environment
          Value: !Ref Environment
      VpcId: !Ref VPC
  RoutePrivateSubnet3:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway3
      RouteTableId: !Ref RouteTablePrivateSubnet3
  RouteTableAssociationPrivateSubnet3:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref RouteTablePrivateSubnet3
      SubnetId: !Ref PrivateSubnet3
Outputs:
  VPC:
    Value: !Ref VPC
    Export:
      Name: !Sub '${ApplicationName}::${Environment}::network::VPC'
  PublicSubnet1:
    Value: !Ref PublicSubnet3
    Export:
      Name: !Sub '${ApplicationName}::${Environment}::network::PublicSubnet1'
  PrivateSubnet1:
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub '${ApplicationName}::${Environment}::network::PrivateSubnet1'
  PublicSubnet2:
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub '${ApplicationName}::${Environment}::network::PublicSubnet2'
  PrivateSubnet2:
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub '${ApplicationName}::${Environment}::network::PrivateSubnet2'
  PublicSubnet3:
    Value: !Ref PublicSubnet3
    Export:
      Name: !Sub '${ApplicationName}::${Environment}::network::PublicSubnet3'
  PrivateSubnet3:
    Value: !Ref PrivateSubnet3
    Export:
      Name: !Sub '${ApplicationName}::${Environment}::network::PrivateSubnet3'
  Subnets:
    Value: !Join
      - ','
      - - !Ref PublicSubnet1
        - !Ref PublicSubnet2
        - !Ref PublicSubnet3
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
        - !Ref PrivateSubnet3
  PublicSubnets:
    Value: !Join
      - ','
      - - !Ref PublicSubnet1
        - !Ref PublicSubnet2
        - !Ref PublicSubnet3
    Export:
      Name: !Sub '${ApplicationName}::${Environment}::network::PublicSubnets'
  PrivateSubnets:
    Value: !Join
      - ','
      - - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
        - !Ref PrivateSubnet3
    Export:
      Name: !Sub '${ApplicationName}::${Environment}::network::PrivateSubnets'
